# strawberry-chat

./: .gitignore  CHANGELOG.txt  Cargo.toml  Dockerfile  ERROR_CODES.md  NEWS.md  README.md  RELEASE.md  TERMS_GERMAN.md  TODO.md  err_codes.md  error_codes.md  example.bad_words.yml  example.config.yml  requirements.txt
.github/: pull_request_template.md  pull_request_template.md 
.github/ISSUE_TEMPLATE/: bug.yml  question.yml  suggestion.yml
.github/workflows/: binary.yml  clippy.yml  codacy.yml  codeql.yml  python.yml
api/: api.py  config.json  web_server.py
api/json/: api_index.json  verified_server.json  versions.json
bot/: BotClient.py  bard.py  bot.py  chatgpt.py  command_tests.py  commands.py  config.yml  config.yml.example  debug_bot.py  default.py  original_method.py  scapi.py
bot/chatgpt/: bot.py  scapi.py
client/: Cargo.toml  android_app.py  blacklist.txt  client - Kopie.py  client.py  client_lite.py  client_nano.py  config.yml.example  lang.yml
client/apps/: android_app.py
client/apps/android/: android_app.py  client.py  server.py
client/src/: main.rs
client/web/: main.py
client/web/templates/: chat.html  index.html
deprecated/: slfcserver.py
deprecated/bot/discord/: discord_bot_3.py
deprecated/bridge/: stbchat.py
deprecated/server/: config.json  kick_command.py
discord/: DiscordBot.py  bot.py  config.yml  config.yml.example  discord_bot.py  main.py  scapi.py  webhook.py
discord/webhook/: discord_webhook.py
docs/: ERROR_CODES.md  TERMS_GERMAN.md
docs/developer/: GERMAN.md
misc/: test.py
misc/bot/: tokengen.py
misc/hashing/: argon_base.py  argon_base_login.py  argon_login.py  password_hashing.py  users.db
misc/network/: ip_address.py
misc/tests/: ipv6_client.py  ipv6_server.py  string_checking.py  terminal_bell.py
misc/tools/: replace.py
old/: bot_client.py
proxy/: example.config.yml  proxy.py
proxy/helper/: strawlog.py
server/: CHANGELOG.txt  Cargo.toml  config.json  config.yml  config.yml.example  database_test.py  example.config.yml  init.py  news.yml  run.sh  screen.sh  server.py  server_sql.py  users.db.example
server/changelogs/: CHANGELOG_1.8.1.txt
server/src/: colors.py  db.py  functions.py  online.py  vars.py
server/src/cli_wins/: feature.rs  print.rs
server/src/commands/: __init__.py  mod.rs
server/src/commands/admin/: ban.py  broadcast.py  broadcast_cmd.py  bwords.py  config_cmd.py  debug.py  kick.py  mute.py  queue.py  queue_cmd.py  role.py  server_settings.py  unmute.py
server/src/commands/default/: about.py  afk.py  afklist.py  block.py  changelog.py  dm.py  exit.py  exit_cmd.py  help.py  news.py  online.py  server_info.py  server_info.rs
server/src/commands/etc/: backend_debug.py  delaccount.py  news.py  ping_command.py  test_command.py  wakey.py
server/src/commands/user/: afk.py  afklist.py  badge.py  description.py  discord.py  dnd.py  memberlist.py  members.py  msgcount.py  nickname.py  online.py  status.py  strawberry_id.py  (+3 more)
server/src/communication/: client.rs  connection_handler.rs  handlers.rs  mod.rs
server/src/database/: mod.rs
server/src/system_core/: commands.rs  config.rs  login.rs  message.rs  mod.rs  objects.rs  server_core.rs  watchdog.rs
src/: config.rs  deserializer.rs  global.rs  main.rs  system_core.rs  utilities.rs
src/cli_wins/: constructor.rs  feature.rs  mod.rs  online_mode.rs  print.rs
src/commands/: mod.rs
src/commands/admin/: admin_settings.rs  ban.rs  broadcast.rs  kick.rs  mute.rs  unban.rs  unmute.rs
src/commands/default/: about.rs  dm.rs  help.rs  server_info.rs
src/commands/etc/: delete_account.rs  hang.rs  hook.rs  panic.rs  test_command.rs
src/commands/user/: badge.rs  block.rs  description.rs  discord.rs  memberlist.rs  members.rs  nickname.rs  online.rs  status.rs  strawberry_id.rs  unblock.rs  user_settings.rs  userinfo.rs
src/communication/: client.rs  connection_handler.rs  handlers.rs  mod.rs  protocol.rs
src/constants/: badges.rs  chars.rs  log_messages.rs  messages.rs  mod.rs
src/database/: db.rs  mod.rs  mysql.rs  postgresql.rs  sqlite.rs
src/security/: automod.rs  crypt.rs  mod.rs  online_mode.rs  verification.rs
src/system_core/: automod.rs  commands.rs  config.rs  db.rs  hooks.rs  internals.rs  log.rs  log_messages.rs  log_parser.rs  login.rs  message.rs  mod.rs  objects.rs  packages.rs  packet.rs  panic.rs  permissions.rs  register.rs  registry.rs  server_core.rs  status.rs  string.rs  types.rs  user.rs  watchdog.rs
stbchat/: Cargo.toml
stbchat-client/: Cargo.toml
stbchat-client/src/: main.rs
stbchat-server/: Cargo.toml
stbchat-server/src/: StrawberryChat.toml  config.rs  connection.rs  main.rs  message.rs
stbchat-server/src/server_core/: database.rs  handle_client.rs  messages_handler.rs  mod.rs
stbchat/src/: error.rs  lib.rs  net.rs  object.rs  packet.rs  read_write.rs  user.rs
