[package]
name = "strawberry-chat"
version = "1.13.0-dp1"
edition = "2021"
authors = ["Juliandev02", "Paddyk45", "matteodev8"]
description = "A simple but nice chat platform for your terminal"
documentation = "https://developers.strawberryfoundations.xyz/stbchat/introduction"
readme = "README.md"
repository = "https://github.com/Strawberry-Foundations/strawberry-chat"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stblib = { version =  "0.6.3-pre1", features = ["stbchat"] }
# stblib = { version =  "0.6.3-pre1", features = ["stbchat"], path = "../stblib-rust" }
tokio = { version = "1.40.0", features = ["full"] }
lazy_static = "1.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.128"
owo-colors = "4.1.0"
futures = "0.3.30"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio-native-tls", "json"] }
strip-ansi-escapes = "0.2.0"
chrono = "0.4.38"
reqwest = "0.12.8"
argon2 = "0.6.0-pre.1"

[profile.release]
opt-level = 'z'
strip = true
lto = true
