[package]
name = "stbchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
num-traits = "0.2.17"
rmp-serde = "1.1.2"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.52"
tokio = { version = "1.35.1", features = ["full"] }
